# near-test

./: Cargo.toml  README.md  verification.sh
src/: lib.rs
