[package]
name = "sitoula-asd-tutorial"
version = "0.1.0"
authors = ["NEAR Inc <hello@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
ed25519-dalek = { version = "1.0.1", detault_features = false}
schnorrkel = { version = "0.9.1", features = [
	"preaudit_deprecated",
	"u64_backend",
], default-features = false }
secp256k1 = { version = "0.22.1" , detault_features = false, features = ["global-context"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

